2025-XX-XX   3.6.1:
-------------------
  * add development files for statistical tests in `devel/random/`


2025-07-29   3.6.0:
-------------------
  * add `util.random_k()`, see #237
  * add `util.sum_indices()`
  * optimize `util.xor_indices()`
  * move development files from `examples/` to `devel/`


2025-07-21   3.5.2:
-------------------
  * optimize `util.random_p()` by also using bitwise AND in final step
  * fix DeprecationWarning regarding `u` type code
  * add [verification tests](../devel/test_random.py) for internals
    of `util.random_p()`


2025-07-14   3.5.1:
-------------------
  * optimize `util.random_p()` for `n < 100`
  * add [Random Bitarrays](random_p.rst) documentation
  * add [statistical tests for random functions](../devel/test_random.py)


2025-07-06   3.5.0:
-------------------
  * add `util.random_p()`
  * improve sparse compression testing


2025-06-23   3.4.3:
-------------------
  * minor updates to documentation
  * C-level:
      - simplify and speedup `extend_unicode01()`
      - customize `resize_lite()` - avoid unused code
      - use `PyTypeObject` for bitarray type object in `_util.c` to
        be consistent with `_bitarray.c`
      - add and improve comments to implementation of sparse bitarray
        compression
      - simplify `sc_count()`


2025-05-21   3.4.2:
-------------------
  * extend documentation of
    [compression of sparse bitarrays](sparse_compression.rst)
  * `util.sc_decode()` and `util.vl_decode()` now raise `StopIteration`
    instead of `ValueError` when unexpected end of stream is encountered
  * add debug mode tests for `read_n()`, `write_n()` and `count_from_word()`


2025-05-15   3.4.1:
-------------------
  * add `pyproject.toml`, see #233
  * implement `bits2bytes()` in C
  * optimize `delslice()` when `step` is larger than about 5
  * consistently name `*_span()` and `*_range()` in C for
    invert, set and count
  * organize and add tests (including debug mode tests for `zlw()`)

