@@ -37,7 +37,9 @@ from bitarray.util import (
     _huffman_tree, huffman_code, canonical_huffman, canonical_decode,
 )
 
-from bitarray.util import _Random, _sum_sqr_indices, _variance # type: ignore
+from bitarray.util import (
+    _Random, _ssqi, _sum_sqr_indices, _variance  # type: ignore
+)
 
 # ---------------------------------------------------------------------------
 
@@ -1029,6 +1031,61 @@ class ParityTests(unittest.TestCase, Util):
 
 # ---------------------------------------------------------------------------
 
+class SSQI_Tests(unittest.TestCase, Util):
+
+    def test_explicit(self):
+        for s, r1, r2 in [
+                ("", 0, 0), ("0", 0, 0), ("1", 0, 0), ("11", 1, 1),
+                ("011", 3, 5), ("001", 2, 4), ("0001100", 7, 25),
+                ("00001111", 22, 126), ("01100111 1101", 49, 381),
+        ]:
+            for a in [bitarray(s, self.random_endian()),
+                      frozenbitarray(s, self.random_endian())]:
+                self.assertEqual(_ssqi(a), r1)
+                self.assertEqual(_ssqi(a, 2), r2)
+
+    def test_wrong_args(self):
+        S = _ssqi
+        self.assertRaises(TypeError, S, '')
+        self.assertRaises(TypeError, S, 1.0)
+        self.assertRaises(TypeError, S)
+        for mode in -1, 0, 3, 4:
+            self.assertRaises(ValueError, S, bitarray("110"), mode)
+
+    def test_ones(self):
+        a = bitarray()
+        sm1 = sm2 = 0
+        for i in range(1000):
+            a.append(1)
+            sm1 += i
+            sm2 += i * i
+            self.assertEqual(_ssqi(a, 1), sm1)
+            self.assertEqual(_ssqi(a, 2), sm2)
+
+    def test_large_random(self):
+        n = 10_037
+        for a in urandom_2(n), frozenbitarray(urandom_2(n)):
+            self.assertEqual(_ssqi(a),
+                             sum(i for i, v in enumerate(a) if v))
+            self.assertEqual(_ssqi(a, 2),
+                             sum(i * i for i, v in enumerate(a) if v))
+
+    def test_large_sparse(self):
+        n = 1_000_003
+        k = 1_000
+        indices = sample(range(n), k)
+        a = zeros(n)
+        self.assertEqual(_ssqi(a), 0)
+        self.assertEqual(_ssqi(a, 2), 0)
+        a[indices] = 1
+        c = a.copy()
+        self.assertEqual(a.count(), k)
+        self.assertEqual(_ssqi(a), sum(indices))
+        self.assertEqual(_ssqi(a, 2), sum(i*i for i in indices))
+        # ensure a wasn't changed
+        self.assertEqual(a, c)
+
+
 class SumIndicesTests(unittest.TestCase, Util):
 
     def test_explicit(self):
@@ -1041,6 +1098,7 @@ class SumIndicesTests(unittest.TestCase, Util):
                       frozenbitarray(s, self.random_endian())]:
                 self.assertEqual(sum_indices(a), r1)
                 self.assertEqual(sum_indices(a, 2), r2)
+                self.assertEqual(a, bitarray(a))
 
     def test_wrong_args(self):
         S = sum_indices
@@ -1050,73 +1108,23 @@ class SumIndicesTests(unittest.TestCase, Util):
         for mode in -1, 0, 3, 4:
             self.assertRaises(ValueError, S, bitarray("110"), mode)
 
-    def test_ones_small(self):
-        a = bitarray()
-        sm1 = sm2 = 0
-        for i in range(1000):
-            a.append(1)
-            sm1 += i
-            sm2 += i * i
-            self.assertEqual(sum_indices(a, 1), sm1)
-            self.assertEqual(sum_indices(a, 2), sm2)
-
-    def test_large_ones(self):
-        n = 100_003
-        for a in ones(n), frozenbitarray(ones(n)):
-            self.assertEqual(sum_indices(a), n * (n - 1) // 2)
-            self.assertEqual(sum_indices(a, 2), n * (n-1) * (2*n-1) // 6)
-
-    def test_large_random(self):
-        n = 10_037
-        for a in urandom_2(n), frozenbitarray(urandom_2(n)):
-            self.assertEqual(sum_indices(a),
-                             sum(i for i, v in enumerate(a) if v))
-            self.assertEqual(sum_indices(a, 2),
-                             sum(i * i for i, v in enumerate(a) if v))
-
-    def test_large_sparse(self):
-        n = 1_000_003
-        k = 1_000
-        indices = sample(range(n), k)
-        a = zeros(n)
-        self.assertEqual(sum_indices(a), 0)
-        self.assertEqual(sum_indices(a, 2), 0)
-        a[indices] = 1
-        c = a.copy()
-        self.assertEqual(a.count(), k)
-        self.assertEqual(sum_indices(a), sum(indices))
-        self.assertEqual(sum_indices(a, 2), sum(i*i for i in indices))
-        # ensure a wasn't changed
-        self.assertEqual(a, c)
-
-    def test_random(self):
-        for a in self.randombitarrays():
-            res = sum_indices(a)
-            self.assertEqual(res, sum(i for i, v in enumerate(a) if v))
-            self.assertEqual(res, sum(a.search(1)))
-            res = sum_indices(a, 2)
-            self.assertEqual(res, sum(i*i for i, v in enumerate(a) if v))
-            self.assertEqual(res, sum(i*i for i in a.search(1)))
-
-
-class SumSqrIndicesTests(unittest.TestCase, Util):
-
-    def test_explicit(self):
-        for s, r in [
-                ("", 0), ("0", 0), ("1", 0), ("11", 1),
-                ("011", 5), ("001", 4), ("0001100", 25),
-                ("00001111", 126), ("01100111 1101", 381),
-        ]:
-            for a in [bitarray(s, self.random_endian()),
-                      frozenbitarray(s, self.random_endian())]:
-                self.assertEqual(_sum_sqr_indices(a), r)
-
-    def test_sum_sqr_indices(self):
+    def test_large(self):
         for n in 500_029, 600_011:  # n below, above block size
             k = 1_000
             indices = sample(range(n), k)
             for freeze in False, True:
-                a = ones(n, self.random_endian())
+                a = ones(n, self.random_endian())   # test sum_indices
+                a[indices] = 0
+                if freeze:
+                    a = frozenbitarray(a)
+                c = a.copy()
+                res = n * (n - 1) // 2
+                res -= sum(indices)
+                self.assertEqual(sum_indices(a), res)
+                # ensure a wasn't changed
+                self.assertEqual(a, c)
+
+                a = ones(n, self.random_endian())   # test _sum_sqr_indices
                 a[indices] = 0
                 if freeze:
                     a = frozenbitarray(a)
