@@ -1,6 +1,7 @@
 2025-XX-XX   3.6.1:
 -------------------
   * add development files for statistical tests in `devel/random/`
+  * optimize `util.sum_indices()`
 
 
 2025-07-29   3.6.0:
